@@ -29,3 +29,5 @@ cover_db/
 MYMETA.*
 
 /Finance-Robinhood-*
+
+*.csv
