@@ -4,6 +4,8 @@ Revision history for Perl extension Finance-Robinhood
 
     - ::Order->executions() was dropping all but timestamp and settlement_date
     - Next and previous cursor information was leaking in paginated data
+    - New demo script: eg/export_orders.pl
+        - Grabs entire order history and writes it to a file or STDOUT as CSV
 
 0.05 2016-04-04T01:53:58Z
 
